<resources>
    <string name="app_name">Quiz Study Guide</string>
    <string name="study_guide">Study Guide</string>
    <string name="begin">Begin</string>
    <string name="question">Question 1/5</string>
    <string name="_0_00">0:00</string>
    <string name="answer_1">Answer #1</string>
    <string name="answer_2">Answer #2</string>
    <string name="answer_3">Answer #3</string>
    <string name="next">Next</string>
    <string name="questionTextView">Question</string>
    <string name="remaining">Remaining</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
</resources>
