<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".QuizStartedActivity">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#9DEDA3"
        android:fontFamily="@font/roboto_bold"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:text="@string/question"
        android:textColor="@android:color/primary_text_light"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/navigationContainer"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerContainer">

        <TextView
            android:id="@+id/quizSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/_1"
            android:textColor="#59AE5F"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/quizSection2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/_2"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/quizSection3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/_3"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/quizSection4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/_4"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/quizSection5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/_5"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timerContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTextView">

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/roboto_light"
            android:text="@string/_0_00"
            android:textColor="@android:color/tertiary_text_dark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/timerTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start|end"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/remaining"
            android:textColor="#F5ACFB"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quizContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F5ACFB"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigationContainer">

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/roboto"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/questionTextView"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/optionsRadioGroup"
            android:layout_width="371dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answerRadioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:padding="2dp"
                android:text="@string/answer_1"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/answerRadioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:padding="2dp"
                android:text="@string/answer_2"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/answerRadioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:padding="2dp"
                android:text="@string/answer_3"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#C2F3C6"
            android:fontFamily="@font/roboto_light"
            android:text="@string/next" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>